--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <a href="products.html" class="btn">Explore Now &#8594;</a>
                 </div>
                 <div class="col-2">
-                        <a href="/products/detail_three.html"><img src="images/demo8.png" alt="bag"></a>
+                        <a href="products/detail_three.html"><img src="images/demo8.png" alt="bag"></a>
                 </div>
             </div>
         </div>
