--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="products.html">Products</a></li>
                         <li><a href="about.html" class="active">About</a></li>
-                        <li><a href="contact.html">Contact us</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                         <li><a href="offers.html">Offers</a></li>
                     </ul>
                 </nav>
