--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
                         <li><a href="/about.html">About</a></li>
                         <li><a href="/contact.html">Contact</a></li>
                         <li><a href="/offers.html">Offers</a></li>
-                        <li><a href="/backend/contact.php">Login</a></li>
+                        <li><a href="/login.php">Login</a></li>
                         <li><a href="/signup.html">Signup</a></li>
                     </ul>
                 </nav>
