--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <li><a href="/contact.html">Contact</a></li>
                         <li><a href="/offers.html">Offers</a></li>
                         <li><a href="/login.php">Login</a></li>
-                        <li><a href="/signup.html">Signup</a></li>
+                        <li><a href="/project-ecommerce/signup.html">Signup</a></li>
                     </ul>
                 </nav>
                 <!-- <img src="images/cart.png" width="30px" height="30px"alt="cart"> -->
