--- a/signup.html
+++ b/signup.html
@@ -49,7 +49,7 @@
         padding: 10px;
         border: none;
         border-radius: 5px;
-        background-color: #007BFF;
+        background-color: #af0505;
         color: #fff;
         cursor: pointer;
     }
@@ -120,8 +120,8 @@
                 <input type="text" name="firstname" placeholder="First Name" required> 
                 <input type="text" name="lastname" placeholder="Last Name" required> 
             </div>
-            <input type="email" name="email" placeholder="Email" required>
-            <input type="tel" name="number" placeholder="Number" required>
+            <input type="email" name="email" placeholder="E-mail" required>
+            <input type="tel" name="number" placeholder="Phone Number" required>
             <input type="password" name="password" placeholder="Create Password" required>
             <input type="password" name="confirm_password" placeholder="Confirm Password" required>
             <div class="terms-container">
