--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="col-2">
                         <h1>Carry in Style: <br> Unleash Your Bag Obsession</h1>
                         <p>Step into the world of fashion-forward bags. Discover our curated collection and find the perfect accessory to elevate your style.</p>
-                        <a href="products.html" class="btn">Explore Now &#8594;</a>
+                        <a href="all_products.php" class="btn">Explore Now &#8594;</a>
                 </div>
                 <div class="col-2">
                         <a href="products/detail_three.html"><img src="images/demo8.png" alt="bag"></a>
@@ -54,92 +54,47 @@
     <!-- featured products -->
 
     <div class="small-container">
-        <h2 class="title">Featured Products</h2>
+        <h2 class="title">New Arrivals</h2>
+        <p>Introducing our latest arrivals, where innovation meets style! Dive into our newest collection and discover the perfect blend of fashion-forward trends and timeless classics.</p>
             <div class="row">
                 <div class="col-4">
                     <a href="/products/detail_four.html">
                     <img src="backend/uploads/demo.png" alt="hiii">
                     <h4>Acer School Bagpack</h4>
-                    <div class="rating">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                    </div>
-                    <p>$79.99</p>
+                    <p style="font-size: medium; text-align: left;">Rs 700</p>
                 </a>
                 </div>
                 <div class="col-4">
                     <img src="backend/uploads/demo.png" alt="hiii">
                     <h4>Laptop bag</h4>
-                    <div class="rating">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                    </div>
-                    <p>$30.00</p>
+                    <p style="font-size: medium; text-align: left;">Rs 1300</p>
                 </div>
                 <div class="col-4">
                     <a href="/products/detail_two.html">
                         <img src="backend/uploads/demo.png" alt="hiii">
-
                     <h4>Laptop bag</h4>
-                    <div class="rating">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                    </div>
-                    <p>$30.00</p>
+                    <p style="font-size: medium; text-align: left;">Rs 1500</p>
                 </a>
                 </div>
             </div>
-            <h2 class="title">Recent Products</h2>
+            <a href="all_products.php" class="btn">View more</a>
+            <h2 class="title">Features</h2>
+            <p>Features meticulously designed to redefine comfort and style. Crafted with precision, each bag is a testament to innovation and functionality.</p>
             <div class="row">
-                <div class="col-4">
-                    <img src="backend/uploads/demo.png" alt="hiii">
-
-                    <h4>Laptop bag</h4>
-                    <div class="rating">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                    </div>
-                    <p>$30.00</p>
+                <div class="feature-item">
+                    <img src="images/quality.png" alt="quality">
+                    <h3>Quality</h3>
+                    <p style="font-size: small;">Quality is at the heart of everything we offer. From meticulously sourced materials to rigorous manufacturing standards, we prioritize excellence to ensure each product meets your highest expectations. Shop with confidence, knowing that every item is crafted with durability, functionality, and style in mind.</p>
                 </div>
-                <div class="col-4">
-                    <img src="backend/uploads/demo.png" alt="hiii">
-
-                    <h4>Laptop bag</h4>
-                    <div class="rating">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                    </div>
-                    <p>$30.00</p>
+                <div class="feature-item">
+                    <img src="images/versatile.png" alt="versatile">
+                    <h3>Versatile</h3>
+                    <p style="font-size: small;">Embrace versatility with our products designed for your dynamic lifestyle. Whether you're at work, leisure, or on the go, our flexible offerings seamlessly adapt to your needs. Experience the freedom to customize, adjust, and utilize our versatile products in countless ways, empowering you to navigate life with ease and style.</p>
                 </div>
-                <div class="col-4">
-                    <a href="/products/detail_one.html">
-                        <img src="backend/uploads/demo.png" alt="hiii">
-
-                    <h4>Laptop bag</h4>
-                    <div class="rating">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                    </div>
-                    <p>$30.00</p>
-                </a>
+                <div class="feature-item">
+                    <img src="images/longlasting.png" alt="long-lasting">
+                    <h3>Long Lasting</h3>
+                    <p style="font-size: small;">Experience enduring quality with our long-lasting products built to withstand the test of time. Crafted from premium materials and engineered with precision, our items promise durability that goes beyond expectations. Invest in reliability and sustainability, ensuring your satisfaction for years to come.</p>
                 </div>
             </div>
     </div>
