--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <a href="/index.html">
+                    <a href="/project-ecommerce/index.html">
                         BagShopNepal
                     </a>
                 </div>
                 <nav>
                     <ul id="items">
-                        <li><a href="/index.html" class="active">Home</a></li>
+                        <li><a href="/project-ecommerce/index.html" class="active">Home</a></li>
                         <li><a href="/project-ecommerce/products.php">Products</a></li>
-                        <li><a href="/about.html">About</a></li>
+                        <li><a href="/project-ecommerce/about.html">About</a></li>
                         <li><a href="/contact.html">Contact</a></li>
-                        <li><a href="/offers.html">Offers</a></li>
-                        <li><a href="/login.php">Login</a></li>
+                        <li><a href="/project-ecommerce/offers.html">Offers</a></li>
+                        <li><a href="/project-ecommerce/login.html">Login</a></li>
                         <li><a href="/project-ecommerce/signup.html">Signup</a></li>
                     </ul>
                 </nav>
@@ -42,7 +42,7 @@
                 <div class="col-2">
                         <h1>Carry in Style: <br> Unleash Your Bag Obsession</h1>
                         <p>Step into the world of fashion-forward bags. Discover our curated collection and find the perfect accessory to elevate your style.</p>
-                        <a href="all_products.php" class="btn">Explore Now &#8594;</a>
+                        <a href="products.php" class="btn">Explore Now &#8594;</a>
                 </div>
                 <div class="col-2">
                         <a href="products/detail_three.html"><img src="images/demo8.png" alt="bag"></a>
@@ -77,22 +77,29 @@
                 </a>
                 </div>
             </div>
-            <a href="all_products.php" class="btn">View more</a>
+            <a href="products.php" class="btn">View more</a>
+
+
             <h2 class="title">Features</h2>
             <p>Features meticulously designed to redefine comfort and style. Crafted with precision, each bag is a testament to innovation and functionality.</p>
             <div class="row">
                 <div class="feature-item">
+                    <br>
                     <img src="images/quality.png" alt="quality">
+                    <br>
                     <h3>Quality</h3>
                     <p style="font-size: small;">Quality is at the heart of everything we offer. From meticulously sourced materials to rigorous manufacturing standards, we prioritize excellence to ensure each product meets your highest expectations. Shop with confidence, knowing that every item is crafted with durability, functionality, and style in mind.</p>
                 </div>
                 <div class="feature-item">
+                    <br>
                     <img src="images/versatile.png" alt="versatile">
+                    <br>
                     <h3>Versatile</h3>
                     <p style="font-size: small;">Embrace versatility with our products designed for your dynamic lifestyle. Whether you're at work, leisure, or on the go, our flexible offerings seamlessly adapt to your needs. Experience the freedom to customize, adjust, and utilize our versatile products in countless ways, empowering you to navigate life with ease and style.</p>
                 </div>
                 <div class="feature-item">
-                    <img src="images/longlasting.png" alt="long-lasting">
+                    <br>
+                    <img src="images/longlasting.png" alt="long-lasting"><br>
                     <h3>Long Lasting</h3>
                     <p style="font-size: small;">Experience enduring quality with our long-lasting products built to withstand the test of time. Crafted from premium materials and engineered with precision, our items promise durability that goes beyond expectations. Invest in reliability and sustainability, ensuring your satisfaction for years to come.</p>
                 </div>
