--- a/about.html
+++ b/about.html
@@ -25,13 +25,13 @@
                 </div>
                 <nav>
                     <ul id="items">
-                        <li><a href="/index.html" class="active">Home</a></li>
+                        <li><a href="/project-ecommerce/index.html" class="active">Home</a></li>
                         <li><a href="/project-ecommerce/products.php">Products</a></li>
-                        <li><a href="/about.html">About</a></li>
-                        <li><a href="/contact.html">Contact</a></li>
-                        <li><a href="/offers.html">Offers</a></li>
-                        <li><a href="/login.php">Login</a></li>
-                        <li><a href="/signup.html">Signup</a></li>
+                        <li><a href="/project-ecommerce/about.html">About</a></li>
+                        <li><a href="/project-ecommerce/contact.html">Contact</a></li>
+                        <li><a href="/project-ecommerce/offers.html">Offers</a></li>
+                        <li><a href="/project-ecommerce/login.php">Login</a></li>
+                        <li><a href="/project-ecommerce/signup.html">Signup</a></li>
                     </ul>
                 </nav>
                 <!-- <img src="images/cart.png" width="30px" height="30px"alt="cart"> -->
@@ -80,19 +80,19 @@
                     </tr>
                     <tr>
                         <td><a href="https://www.facebook.com">Facebook</a></td>
-                        <td><a href="policy.html">Privacy Policy</a></td>
+                        <td><a href="/project-ecommerce/policy.html">Privacy Policy</a></td>
                     </tr>
                     <tr>
-                        <td><a href="https://www.instagram.com">Instagram</a></td>
+                        <td><a href="/project-ecommerce/https://www.instagram.com">Instagram</a></td>
                         <td><a href="shipping.html">Shipping policy</a></td>
                     </tr>
                     <tr>
                         <td><a href="https://www.viber.com">Viber</a></td>
-                        <td><a href="return.html">Return Policy</a></td>
+                        <td><a href="/project-ecommerce/return.html">Return Policy</a></td>
                     </tr>
                     <tr>
                         <td><a href="https://www.whatsapp.com">Whatsapp</a></td>
-                        <td><a href="terms.html">Terms & Conditions</a></td>
+                        <td><a href="/project-ecommerce/terms.html">Terms & Conditions</a></td>
                     </tr>
                 </table>    
             </div>
