--- a/contact.html
+++ b/contact.html
@@ -104,19 +104,19 @@
                     </tr>
                     <tr>
                         <td><a href="https://www.facebook.com">Facebook</a></td>
-                        <td><a href="policy.html">Privacy Policy</a></td>
+                        <td><a href="/project-ecommerce/policy.html">Privacy Policy</a></td>
                     </tr>
                     <tr>
-                        <td><a href="https://www.instagram.com">Instagram</a></td>
+                        <td><a href="/project-ecommerce/https://www.instagram.com">Instagram</a></td>
                         <td><a href="shipping.html">Shipping policy</a></td>
                     </tr>
                     <tr>
                         <td><a href="https://www.viber.com">Viber</a></td>
-                        <td><a href="return.html">Return Policy</a></td>
+                        <td><a href="/project-ecommerce/return.html">Return Policy</a></td>
                     </tr>
                     <tr>
                         <td><a href="https://www.whatsapp.com">Whatsapp</a></td>
-                        <td><a href="terms.html">Terms & Conditions</a></td>
+                        <td><a href="/project-ecommerce/terms.html">Terms & Conditions</a></td>
                     </tr>
                 </table>    
             </div>
@@ -126,4 +126,4 @@
     </div>
     
 </body>
-</htmlauto
+</html>
