--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <li><a href="/project-ecommerce/index.html" class="active">Home</a></li>
                         <li><a href="/project-ecommerce/products.php">Products</a></li>
                         <li><a href="/project-ecommerce/about.html">About</a></li>
-                        <li><a href="/contact.html">Contact</a></li>
+                        <li><a href="project-ecommerce/contact.html">Contact</a></li>
                         <li><a href="/project-ecommerce/offers.html">Offers</a></li>
                         <li><a href="/project-ecommerce/login.html">Login</a></li>
                         <li><a href="/project-ecommerce/signup.html">Signup</a></li>
