--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <a href="/index.html">
+                    <a href="/project-ecommerce/index.html">
                         BagShopNepal
                     </a>
                 </div>
