--- a/policy.html
+++ b/policy.html
@@ -109,12 +109,16 @@
                     <h3>Download our App</h3>
                     <p>Download  App for Android and ios mobile phone.</p>
                     <div class="app-logo">
-                        <img src="images/play-store.png" alt="">
-                        <img src="images/app-store.png" alt="">
+                        <img src="backend/uploads/play-store.png" alt="">
+                        <img src="backend/uploads/app-store.png" alt="">
                     </div>
                 </div>
                 <div class="footer-col-2">
-                    <img src="images/logo.jpg" alt="logo">
+                    <h3>Newsletter</h3>
+                    <form action="../project-ecommerce/subscribe.php" method="post">
+                        <input type="email" name="email" placeholder="Enter your email">
+                        <button type="submit">Subscribe</button>
+                    </form>
                     <p>Our purpose is to sustainably make the pleasure and benefits of Bags Accessible to many.</p>
                 </div>
                 <table border="0" cellspacing="10" cellpadding="10">
