--- a/shipping.html
+++ b/shipping.html
@@ -58,50 +58,54 @@
             <br>
         </div>
     </div>
-    <!-- Footer -->
+   <!-- Footer -->
 
-    <div class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="footer-col-1">
-                    <h3>Download our App</h3>
-                    <p>Download  App for Android and ios mobile phone.</p>
-                    <div class="app-logo">
-                        <img src="images/play-store.png" alt="">
-                        <img src="images/app-store.png" alt="">
-                    </div>
+   <div class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="footer-col-1">
+                <h3>Download our App</h3>
+                <p>Download  App for Android and ios mobile phone.</p>
+                <div class="app-logo">
+                    <img src="backend/uploads/play-store.png" alt="">
+                    <img src="backend/uploads/app-store.png" alt="">
                 </div>
-                <div class="footer-col-2">
-                    <img src="images/logo.jpg" alt="logo">
-                    <p>Our purpose is to sustainably make the pleasure and benefits of Bags Accessible to many.</p>
-                </div>
-                <table border="0" cellspacing="10" cellpadding="10">
-                    <tr>
-                        <td><h3>Follow us:</h3></td>
-                        <td><h3>Quick Links</h3></td>
-                    </tr>
-                    <tr>
-                        <td><a href="https://www.facebook.com">Facebook</a></td>
-                        <td><a href="policy.html">Privacy Policy</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="https://www.instagram.com">Instagram</a></td>
-                        <td><a href="shipping.html">Shipping policy</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="https://www.viber.com">Viber</a></td>
-                        <td><a href="return.html">Return Policy</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="https://www.whatsapp.com">Whatsapp</a></td>
-                        <td><a href="terms.html">Terms & Conditions</a></td>
-                    </tr>
-                </table>    
             </div>
-            <hr>
-            <p class="copyright">© 2023 BagShop Nepal. All rights reserved. </p>
+            <div class="footer-col-2">
+                <h3>Newsletter</h3>
+                <form action="../project-ecommerce/subscribe.php" method="post">
+                    <input type="email" name="email" placeholder="Enter your email">
+                    <button type="submit">Subscribe</button>
+                </form>
+                <p>Our purpose is to sustainably make the pleasure and benefits of Bags Accessible to many.</p>
+            </div>
+            <table border="0" cellspacing="10" cellpadding="10">
+                <tr>
+                    <td><h3>Follow us:</h3></td>
+                    <td><h3>Quick Links</h3></td>
+                </tr>
+                <tr>
+                    <td><a href="https://www.facebook.com">Facebook</a></td>
+                    <td><a href="policy.html">Privacy Policy</a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://www.instagram.com">Instagram</a></td>
+                    <td><a href="shipping.html">Shipping policy</a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://www.viber.com">Viber</a></td>
+                    <td><a href="return.html">Return Policy</a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://www.whatsapp.com">Whatsapp</a></td>
+                    <td><a href="terms.html">Terms & Conditions</a></td>
+                </tr>
+            </table>    
         </div>
+        <hr>
+        <p class="copyright">© 2023 BagShop Nepal. All rights reserved. </p>
     </div>
-    
+</div>
+
 </body>
 </html>
