--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="css/style.css" class="css">
+    <link rel="stylesheet" href="/project-ecommerce/css/style.css" class="css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +30,7 @@
                         <li><a href="/project-ecommerce/about.html">About</a></li>
                         <li><a href="project-ecommerce/contact.html">Contact</a></li>
                         <li><a href="/project-ecommerce/offers.html">Offers</a></li>
-                        <li><a href="/project-ecommerce/login.html">Login</a></li>
+                        <li><a href="/project-ecommerce/login.php">Login</a></li>
                         <li><a href="/project-ecommerce/signup.html">Signup</a></li>
                     </ul>
                 </nav>
