updated active class

--- a/about.html
+++ b/about.html
@@ -25,15 +25,20 @@
                 </div>
                 <nav>
                     <ul id="items">
-                        <li><a href="/project-ecommerce/index.html" class="active">Home</a></li>
+                        <li><a href="/project-ecommerce/index.html" >Home</a></li>
                         <li><a href="/project-ecommerce/products.php">Products</a></li>
-                        <li><a href="/project-ecommerce/about.html">About</a></li>
+                        <li><a href="/project-ecommerce/about.html" class="active">About</a></li>
                         <li><a href="/project-ecommerce/contact.html">Contact</a></li>
                         <li><a href="/project-ecommerce/offers.html">Offers</a></li>
                         <li><a href="/project-ecommerce/login.php">Login</a></li>
                         <li><a href="/project-ecommerce/signup.html">Signup</a></li>
                     </ul>
                 </nav>
+                <button id="hamburger-menu" class="hamburger-menu">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
                 <!-- <img src="images/cart.png" width="30px" height="30px"alt="cart"> -->
             </div>
             <hr>
