--- a/terms.html
+++ b/terms.html
@@ -25,7 +25,7 @@
                 </div>
                 <nav>
                     <ul id="items">
-                        <li><a href="/project-ecommerce/index.html" class="active">Home</a></li>
+                        <li><a href="/project-ecommerce/index.html">Home</a></li>
                         <li><a href="/project-ecommerce/products.php">Products</a></li>
                         <li><a href="/project-ecommerce/about.html">About</a></li>
                         <li><a href="/project-ecommerce/contact.html">Contact</a></li>
@@ -34,6 +34,11 @@
                         <li><a href="/project-ecommerce/signup.html">Signup</a></li>
                     </ul>
                 </nav>
+                <button id="hamburger-menu" class="hamburger-menu">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
                 <!-- <img src="images/cart.png" width="30px" height="30px"alt="cart"> -->
             </div>
             <hr>
@@ -101,7 +106,7 @@
                     </tr>
                     <tr>
                         <td><a href="https://www.whatsapp.com">Whatsapp</a></td>
-                        <td><a href="terms.html">Terms & Conditions</a></td>
+                        <td><a href="terms.html" class="active">Terms & Conditions</a></td>
                     </tr>
                 </table>    
             </div>
