--- a/signup.html
+++ b/signup.html
@@ -192,6 +192,7 @@
             <p class="copyright">© 2023 BagShop Nepal. All rights reserved. </p>
         </div>
     </div>
+    <script src="./js/button.js"></script>
     
 </body>
 </html>
