--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                         <li><a href="/project-ecommerce/offers.html">Offers</a></li>
                         <li><a href="/project-ecommerce/login.php">Login</a></li>
                         <li><a href="/project-ecommerce/signup.html">Signup</a></li>
+                        
                     </ul>
                 </nav>
                 <button id="hamburger-menu" class="hamburger-menu">
@@ -39,7 +40,7 @@
                     <span></span>
                     <span></span>
                 </button>
-                <!-- <img src="images/cart.png" width="30px" height="30px"alt="cart"> -->
+                <a href="cart.php"><img src="images/cart.png" width="30px" height="30px"alt="cart"></a>
             </div>
             <hr id="hr">
             <br>
