added logout feature

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
                         <li><a href="/project-ecommerce/offers.html">Offers</a></li>
                         <li><a href="/project-ecommerce/login.php">Login</a></li>
                         <li><a href="/project-ecommerce/signup.html">Signup</a></li>
+                        <a href="cart.php"><i class="fa-solid fa-cart-shopping"></i></a>
+
                         
                     </ul>
                 </nav>
@@ -40,7 +42,7 @@
                     <span></span>
                     <span></span>
                 </button>
-                <a href="cart.php"><img src="images/cart.png" width="30px" height="30px"alt="cart"></a>
+
             </div>
             <hr id="hr">
             <br>
