addded mail feature

--- a/signup.html
+++ b/signup.html
@@ -140,7 +140,7 @@
             <button type="submit" id="signup-button">Sign Up</button>
             <br>
             <br>
-            <p>Already have an account? <a href="./login.html">Log in</a>.</p>
+            <p>Already have an account? <a href="./login.php">Log in</a>.</p>
         </form>
     </div>
 
