--- a/terms.html
+++ b/terms.html
@@ -32,6 +32,7 @@
                         <li><a href="/project-ecommerce/offers.html">Offers</a></li>
                         <li><a href="/project-ecommerce/login.php">Login</a></li>
                         <li><a href="/project-ecommerce/signup.html">Signup</a></li>
+                        <a href="cart.php"><i class="fa-solid fa-cart-shopping"></i></a>
                     </ul>
                 </nav>
                 <button id="hamburger-menu" class="hamburger-menu">
