contactForm db and title

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
-    <title>BagShop Nepal</title>
+    <title>BagSales Nepal</title>
 </head>
 <body>
     <div class="header">
@@ -20,7 +20,7 @@
             <div class="navbar">
                 <div class="logo">
                     <a href="/project-ecommerce/index.html">
-                        BagShopNepal
+                        BagSalesNepal
                     </a>
                 </div>
                 <nav>
@@ -50,10 +50,10 @@
                 </div>
             </div>
             <p style="text-align: center; font-size: 18px;">
-                Welcome to BagShop Nepal!
+                Welcome to BagSales Nepal!
                 <br><br>
-                At BagShop Nepal, we are passionate about providing our customers with high-quality bags that reflect their style and meet their needs. We offer a curated collection of stylish and functional bags, including backpacks, handbags, laptop bags, and travel bags. <br><br>
-                Quality and customer satisfaction are our top priorities, and we strive to provide a seamless shopping experience. We are committed to giving back to the community and promoting sustainability. Join us in finding the perfect bag that enhances your journey. <br><br>Thank you for choosing BagShop Nepal!</p>
+                At BagSales Nepal, we are passionate about providing our customers with high-quality bags that reflect their style and meet their needs. We offer a curated collection of stylish and functional bags, including backpacks, handbags, laptop bags, and travel bags. <br><br>
+                Quality and customer satisfaction are our top priorities, and we strive to provide a seamless shopping experience. We are committed to giving back to the community and promoting sustainability. Join us in finding the perfect bag that enhances your journey. <br><br>Thank you for choosing BagSales Nepal!</p>
                 <br>
         </div>
     </div>
@@ -103,7 +103,7 @@
                 </table>    
             </div>
             <hr>
-            <p class="copyright">© 2023 BagShop Nepal. All rights reserved. </p>
+            <p class="copyright">© 2023 BagSales Nepal. All rights reserved. </p>
         </div>
     </div>
     <script src="./js/button.js"></script>
