--- a/contact.html
+++ b/contact.html
@@ -16,14 +16,14 @@
             color: white;
         }
     </style>
-    <title>BagShop Nepal</title>
+    <title>BagSales Nepal</title>
 </head>
 <body>
         <div class="container">
             <div class="navbar">
                 <div class="logo">
                     <a href="/project-ecommerce/index.html">
-                        BagShopNepal
+                        BagSalesNepal
                     </a>
                 </div>
                 <nav>
@@ -50,10 +50,10 @@
 
     <div class="wrapper">
         <h1 id="get">Get In Touch</h1>
-        <p>We would love to respond to your queries nad help you succeed. Feel free to get in touch with us.</p>
+        <p>We would love to respond to your queries and help you succeed. Feel free to get in touch with us.</p>
             <div class="contact-left">
                 <br>
-                <form action="process_form.php" method="POST">
+                <form action="./backend/contact.php" method="POST">
                     <div class="contact-row">
                         <div class="contact-group">
                             <label>Name</label>
@@ -61,7 +61,7 @@
                         </div>
                         <div class="contact-group">
                             <label>Phone</label>
-                            <input type="number" placeholder="+977-9841234567" name="number">
+                            <input type="text" placeholder="+977-9841234567" name="phone">
                         </div>
                     </div>
                     <div class="contact-row">
@@ -127,7 +127,7 @@
                 </table>    
             </div>
             <hr>
-            <p class="copyright">© 2023 BagShop Nepal. All rights reserved. </p>
+            <p class="copyright">© 2023 BagSales Nepal. All rights reserved. </p>
         </div>
     </div>
     <script src="./js/button.js"></script>
