--- a/policy.html
+++ b/policy.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
-    <title>BagShop Nepal</title>
+    <title>BagSales Nepal</title>
 </head>
 <body>
     <div class="header">
@@ -20,7 +20,7 @@
             <div class="navbar">
                 <div class="logo">
                     <a href="/project-ecommerce/index.html">
-                        BagShopNepal
+                        BagSalesNepal
                     </a>
                 </div>
                 <nav>
@@ -52,7 +52,7 @@
             <p style="font-size: 18px;">
                 <b>Privacy Policy:</b>
                 <br><br>
-                This Privacy Policy describes how <b>BagShop Nepal</b> ("we," "us," or "our") collects, uses, shares, and protects the personal information obtained from users ("you" or "your") of our website <a href="https://www.bagshopnepal.pages.dev" style="text-decoration: underline;">https://bagshopnepal.pages.dev/</a>. By accessing or using our website, you consent to the terms outlined in this Privacy Policy.</p>
+                This Privacy Policy describes how <b>BagSales Nepal</b> ("we," "us," or "our") collects, uses, shares, and protects the personal information obtained from users ("you" or "your") of our website <a href="https://www.bagshopnepal.pages.dev" style="text-decoration: underline;">https://bagshopnepal.pages.dev/</a>. By accessing or using our website, you consent to the terms outlined in this Privacy Policy.</p>
                 <br>
             <p style="font-size: 18px;">
                     <b>Information We collect:</b>
@@ -151,7 +151,7 @@
                 </table>    
             </div>
             <hr>
-            <p class="copyright">© 2023 BagShop Nepal. All rights reserved. </p>
+            <p class="copyright">© 2023 BagSales Nepal. All rights reserved. </p>
         </div>
     </div>
     <script src="./js/button.js"></script>
