--- a/terms.html
+++ b/terms.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
-    <title>BagShop Nepal</title>
+    <title>BagSales Nepal</title>
 </head>
 <body>
     <div class="header">
@@ -20,7 +20,7 @@
             <div class="navbar">
                 <div class="logo">
                     <a href="/project-ecommerce/index.html">
-                        BagShopNepal
+                        BagSalesNepal
                     </a>
                 </div>
                 <nav>
@@ -52,15 +52,15 @@
             <br><br><br>
             <p style="font-size: 15px;">
                 <li>By accessing or using our website, you agree to comply with these Terms and Conditions.</li>
-                <li>All content, trademarks, and intellectual property displayed on our website are the property of BagShop Nepal or its licensors.</li>
+                <li>All content, trademarks, and intellectual property displayed on our website are the property of BagSales Nepal or its licensors.</li>
                 <li>Product information provided on our website is for reference only and may be subject to change without notice.</li>
                 <li>Prices listed on our website are in [insert currency] and are subject to change without notice.</li>
                 <li>We accept various payment methods, and by making a purchase, you agree to provide accurate payment information.</li>
                 <li>Order confirmation email serves as acknowledgment of your order and does not constitute acceptance.</li>
                 <li>We reserve the right to accept or decline an order for any reason.</li>
                 <li>Shipping and delivery will be in accordance with our Shipping Policy.</li>
-                <li>BagShop Nepal shall not be liable for any damages arising from the use of our website, products, or services.</li>
-                <li>You agree to indemnify and hold BagShop Nepal, its affiliates, employees, and representatives harmless from any claims or losses.</li>
+                <li>BagSales Nepal shall not be liable for any damages arising from the use of our website, products, or services.</li>
+                <li>You agree to indemnify and hold BagSales Nepal, its affiliates, employees, and representatives harmless from any claims or losses.</li>
             </p>   
                 <br><br><br>
         </div>
@@ -112,7 +112,7 @@
                 </table>    
             </div>
             <hr>
-            <p class="copyright">© 2023 BagShop Nepal. All rights reserved. </p>
+            <p class="copyright">© 2023 BagSales Nepal. All rights reserved. </p>
         </div>
     </div>
     <script src="./js/button.js"></script>
