--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <title>BagShop Nepal</title>
+    <title>BagSales Nepal</title>
     
 </head>
 <body>
@@ -20,7 +20,7 @@
             <div class="navbar">
                 <div class="logo">
                     <a href="/project-ecommerce/index.html">
-                        BagShopNepal
+                        BagSalesNepal
                     </a>
                 </div>
                 <nav>
@@ -125,7 +125,7 @@
 
                 </div>
                 <div class="col-2">
-                    Exclusively available on BagShop Nepal
+                    Exclusively available on BagSales Nepal
                     <h1>Laptop Bag</h1>
                     <small>Elevate your work style with our sleek and durable laptop bags, designed for both fashion and function. Stay organized and professional on the go.</small>
                     <br>
@@ -180,7 +180,7 @@
                 </table>    
             </div>
             <hr>
-            <p class="copyright">© 2023 BagShop Nepal. All rights reserved. </p>
+            <p class="copyright">© 2023 BagSales Nepal. All rights reserved. </p>
         </div>
     </div>
 
