--- a/offers.html
+++ b/offers.html
@@ -13,14 +13,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
     
-    <title>Offers - BagShop Nepal</title>
+    <title>Offers - BagSales Nepal</title>
 </head>
 <body>
     <div class="container">
         <div class="navbar">
             <div class="logo">
                 <a href="/project-ecommerce/index.html">
-                    BagShopNepal
+                    BagSalesNepal
                 </a>
             </div>
             <nav>
@@ -152,7 +152,7 @@
                 </table>    
             </div>
             <hr>
-            <p class="copyright">© 2023 BagShop Nepal. All rights reserved. </p>
+            <p class="copyright">© 2023 BagSales Nepal. All rights reserved. </p>
         </div>
     </div>
     <script src="./js/button.js"></script>
