--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <li><a href="/project-ecommerce/offers.html">Offers</a></li>
                         <li><a href="/project-ecommerce/login.php">Login</a></li>
                         <li><a href="/project-ecommerce/signup.html">Signup</a></li>
-                        <a href="cart.php"><i class="fa-solid fa-cart-shopping"></i></a>
+                        <a href="./cart/cart.php"><i class="fa-solid fa-cart-shopping"></i></a>
 
                         
                     </ul>
