--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
             color: white;
         }
     </style>
-    <title>BagSales Nepal</title>
+    <title>Contact - BagSales Nepal</title>
 </head>
 <body>
         <div class="container">
