--- a/return.html
+++ b/return.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
-    <title>BagSales Nepal</title>
+    <title>Return Policy - BagSales Nepal</title>
 </head>
 <body>
     <div class="header">
