--- a/offers.html
+++ b/offers.html
@@ -88,7 +88,7 @@
             <br>
             <div class="row">
                 <div class="col-2">
-                    <img src="images/demo12.png" id="demo12">
+                    <img src="backend/uploads/demo12.png" id="demo12">
                 </div>
                 <div class="col-2">
                     <h1>Luggage & Handbag (Combo Offer!!!)</h1>
