--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
                 </a>
                 </div>
                 <div class="col-4">
-                    <img src="backend/uploads/demo.png" alt="hiii">
+                    <img src="backend/uploads/demo1.png" alt="hiii">
                     <h4>Laptop bag</h4>
                     <p style="font-size: medium; text-align: left;">Rs 1300</p>
                 </div>
                 <div class="col-4">
                     <a href="/products/detail_two.html">
-                        <img src="backend/uploads/demo.png" alt="hiii">
+                        <img src="backend/uploads/demo12.png" alt="hiii">
                     <h4>Laptop bag</h4>
                     <p style="font-size: medium; text-align: left;">Rs 1500</p>
                 </a>
