--- a/offers.html
+++ b/offers.html
@@ -104,7 +104,7 @@
                     <a href="" class="btn">Buy Now &#8594</a>
                 </div>
                 <div class="col-2">
-                    <img src="images/demo10.png">
+                    <img src="backend/uploads/demo1.png">
                 </div>
             </div>
             <hr style="border: 1px solid black;">
